# tanmatsu-launcher

./: .gitignore  CHANGELOG_WHY2025.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  release.yml
components/gui/: gui_element_progressbar.c
components/gui/include/: gui_style.h
components/nicolaielectronics__tanmatsu_coprocessor/: CMakeLists.txt  tanmatsu_coprocessor.c
main/: CMakeLists.txt  Kconfig  app_management.c  app_management.h  app_metadata_parser.c  app_metadata_parser.h  app_usage.c  app_usage.h  appfs_settings.c  appfs_settings.h  coprocessor_management.c  device_settings.c  device_settings.h  filesystem_utils.c  filesystem_utils.h  http_download.c  icons.c  idf_component.yml  lora_settings_handler.c  main.c  plugin_api.c  plugin_manager.c  radio_ota.c  repository_client.c  sdcard.c  why2025_display.c  wifi_ota.c
main/common/: display.c  theme.c
main/menu/: app_inspect.c  apps.c  firmware_update.c  firmware_update.h  menu_brightness.c  menu_repository_client.c  menu_repository_client_project.c  message_dialog.c  message_dialog.h  owner.c  radio_update.c  settings.c  settings_lora.c  settings_repository.c  settings_theme.c  tools.c
sdkconfigs/: general  why2025
